@@ -1,4 +1,6 @@
 master
+- zixaphir
+  Added Per-Board Personas.
 - noface
   Added new function 'Remove Spoilers'.
 
